# RetirementEngine

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .venv  Dockerfile.backend  Dockerfile.frontend  FRED_data_fetcher.py  Regime_Training_and_Classification.ipynb  Retirement_Simulator.ipynb  Untitled.ipynb  cli.py  docker-compose.prod.yml  docker-compose.yml  generate_data.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-locked.txt  requirements.txt  setup.py  setup_env.sh  streamlit_app.py  sync_audit.txt  sync_audit_20251011_092914.txt  sync_exclude.txt  test_files.txt
ai/: regime_predictor.py
archive/: generate_data.py  requirements-ci.txt
backend/: .gitignore  main.py  requirements-dev.txt  requirements.txt  setup.py
frontend/: app.py  package-lock.json  package.json  state.py
nginx/: default.conf
regimes/: indicators.py
retirement_engine/: av_loader.py  cli.py  config.py  config.yaml  data_loader.py  market_data.py  monte_carlo.py  plotting.py  simulator.py  withdrawal_strategies.py
retirement_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: cli.py  cli_helpers.py  config.py  config.yaml  data_loader.py  enums.py  factory.py  historical_data_processor.py  main.py  monte_carlo.py  normal_distribution.py  portfolio_builder.py  reporting.py  resolve_path.py  runner.py  simulator.py  student_t_distribution.py  synthetic_data.py  withdrawal_strategies.py
tests/: __init__.py  test_api.py  test_build_daily_returns_labeled.py  test_cli.py  test_cli_helpers.py  test_data_loader.py  test_defaults.py  (+19 more)
(+75 files in other folders)
