[project]
name = "retirement_engine"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn",
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "ruff",
  "httpx",
  "pytest",
  "pytest-cov",
  "PyYAML",
  "typer",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true

exclude = [
  "RetirementEngine/arrow/",
  "src/notebooks/",
  "__pycache__/",
  ".venv/",
  ".git/",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Ignore line length if needed

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

